# rainbow

./: .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  source_me_first.sh
main/: CMakeLists.txt  HX711.h  MPU6050.h  app_main.cpp  main.cpp  tasks.txt
tools/: check_idf_revision.sh  find_include_folders.sh  git-post-commit.bash  partitions.xlsx  setup.sh
